# sdl-proof-of-concept

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libraries/: download-libs.sh
